# Prompt2Model-Language-Guided-Vision-Model-Factory

./: .gitignore  FINAL_REPORT.md  README.md  progress_report.md  pyproject.toml  requirements.txt  work_division.md
data/: telemetry_history.csv
data/report_eval/: progress_metrics.json
data/report_eval/beans_ablation/: metrics.json
data/report_eval/beans_benchmark/: metrics.json
data/report_eval/cifar10_benchmark/: metrics.json
latex/: main.aux  main.bbl  main.bib  main.blg  main.fdb_latexmk  main.fls  main.tex
latex/tables/: ablation_results.tex  progress_results.tex
output/smoke/classification_run/: evaluation_report.md  pipeline_config.json
output/smoke/detection_data/: annotations.json
output/smoke/detection_run/: evaluation_report.md  pipeline_config.json
scripts/: check_reproducibility.py  edge_infer.py  generate_architecture_figure.py  generate_final_report.py  generate_progress_assets.py  interactive_demo.py  run_beans_ablation.py  run_beans_real_benchmark.py  run_cifar10_real_benchmark.py  run_final_demo.py  run_tune_hpo.py  video_infer.py
src/prompt2model/: __init__.py  augmentations.py  cli.py  config.py  data.py  evaluation.py  exporting.py  hpo.py  label_resolution.py  models.py  parsing.py  pipeline.py  reporting.py  telemetry.py  training.py  tuning.py
tests/: test_detection_smoke.py  test_edge_infer.py  test_evaluation.py  test_hpo_smoke.py  test_label_resolution.py  test_metadata.py  test_parsing.py  test_pipeline_smoke.py  test_telemetry.py  test_tuning.py
