[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt2model"
version = "0.1.0"
description = "Language-guided vision model factory prototype"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.12",
  "PyYAML>=6.0",
  "Pillow>=10.4",
  "torch>=2.5",
  "torchvision>=0.20",
  "transformers>=4.50",
  "scikit-learn>=1.6",
  "onnx>=1.17",
  "onnxruntime>=1.24",
]

[project.scripts]
prompt2model = "prompt2model.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

