[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt2model"
version = "0.1.0"
description = "Language-guided vision model factory prototype"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.12",
  "PyYAML>=6.0",
  "Pillow>=10.4",
  "torch>=2.5",
  "torchvision>=0.20",
  "transformers>=4.50",
  "scikit-learn>=1.6",
  "onnx>=1.17",
  "onnxruntime>=1.24",
  "optuna>=3.6",
  "ultralytics>=8.0",
  "ray[tune]>=2.10",
  "fvcore>=0.1.5",
  "psutil>=6.1",
]

[project.optional-dependencies]
tune = ["ray[tune]>=2.10"]

[project.scripts]
prompt2model = "prompt2model.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

